--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,1 +1,7 @@
-<router-outlet />
+<div class="flex flex-col min-h-screen bg-gray-50">
+  @if (!isLoginRoute()) {
+  <app-header />
+  }
+
+  <router-outlet />
+</div>
