--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col min-h-screen bg-gray-50">
-  @if (!isLoginRoute()) {
+  @if (!isLoginRoute() && !isNotFoundRoute()) {
   <app-header />
   }
 
