--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -11,7 +11,7 @@
   <!-- Usuário -->
   <div class="flex items-center space-x-4">
     <span class="text-gray-700 font-medium">Usuário: {{user}}</span>
-    <button class="px-3 py-1 text-sm border rounded hover:bg-gray-100">Alterar Senha</button>
-    <button class="px-3 py-1 text-sm bg-red-500 text-white rounded hover:bg-red-600">Sair</button>
+    <button (click)="navChangePassword()" class="px-3 py-1 text-sm border rounded hover:bg-gray-100 cursor-pointer">Alterar Senha</button>
+    <button (click)="logout()" class="px-3 py-1 text-sm bg-red-500 text-white rounded hover:bg-red-600 cursor-pointer">Sair</button>
   </div>
 </header>
