--- a/frontend/src/app/pages/motorista/details-driver/details-driver.html
+++ b/frontend/src/app/pages/motorista/details-driver/details-driver.html
@@ -35,6 +35,18 @@
           >
           <p class="text-gray-800 text-sm">{{ driver.cnh }}</p>
         </div>
+         <div>
+          <label class="block text-xs font-semibold text-gray-500 uppercase mb-1"
+            >Categoria CNH</label
+          >
+          <p class="text-gray-800 text-sm">{{ driver.cnhCategory }}</p>
+        </div>
+        <div>
+          <label class="block text-xs font-semibold text-gray-500 uppercase mb-1"
+            >Validade CNH</label
+          >
+          <p class="text-gray-800 text-sm">{{ driver.cnhExpiration | date:'dd/MM/yyyy' }}</p>
+        </div>
         <div>
           <label class="block text-xs font-semibold text-gray-500 uppercase mb-1"
             >Status</label
