--- a/frontend/src/app/components/modal-edit-component/modal-edit-component.html
+++ b/frontend/src/app/components/modal-edit-component/modal-edit-component.html
@@ -40,6 +40,15 @@
               />
             }
 
+            @if (field.type === 'datetime-local') {
+              <input
+                type="datetime-local"
+                [(ngModel)]="entity[field.name]"
+                class="border border-gray-300 rounded-lg px-3 py-2 w-full text-sm
+                       focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none"
+              />
+            }
+
             @if (field.type === 'select') {
               <select
                 [(ngModel)]="entity[field.name]"
